<resources>
    <string name="project_name">Android Project</string>
    <string name="app_name1">Quiz Creator</string>
    <string name="app_name2">Patient Record</string>
    <string name="app_name3">OCTranspo</string>
    <string name="welcome">Thank you for choosing our product!</string>
    <string name="quiz_creator">Your Quiz</string>
    <string name="create">New Quiz</string>
    <string name="choose">Choose Type of Quiz</string>
    <string name="yourQuiz">The Quiz You Picked</string>
    <string name="checkAnswer">Check</string>
    <string name="hint">Hint</string>
    <string name="multipleChoice">Multiple Choice</string>
    <string name="Numeric">Numeric</string>
    <string name="TrueFlase">True or False</string>
    <string name="save">Save Question</string>
    <string name="typeHere">Type your question here</string>
    <string name="typeAnswerHere">Type your answer here</string>
    <string name="rememberDecimal">Remember to write the number of decimals in your question</string>
    <string name="becarefulDecimal">Please don\'t forget to round your answer to the correct number of decimal points</string>
    <string name="continueImport">Do you wish to import quiz from the Internet?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="saveChange">Save Change</string>

    <string name="oc_main">OCTranspo</string>
    <string name="oc_addStop">Add Stop</string>
    <string name="oc_delStop">Delete Stop</string>
    <string name="oc_enterStop">Please enter stop number</string>
    <string name="oc_submit">Submit</string>
    <string name="oc_routeInfo">Route Information</string>
    <string name="oc_done">Done</string>
    <string name="oc_back">Back</string>
    <string name="oc_searchStop">Search Stop</string>
    <string name="oc_adddelStop">Add/Delete Stop</string>
    <string name="oc_search">Search</string>
    <string name="oc_reroute">Recent Route</string>
    <string name="oc_stopNum">Stop Number: </string>
    <string name="oc_stopDes">Stop Description: </string>
    <string name="oc_searchResult">Search Result</string>
    <string name="oc_recentSearch">Recent Search Stop</string>
    <string name="oc_savedStop">Saved Stop</string>
    <string name="oc_routeNum">Route Number: </string>
    <string name="oc_routeDes">Route Description: </string>

    <string name="importXML">Import</string>
    <string name="Stats">Stats</string>
    <string name="mc">Multiple Choice</string>
    <string name="tf">True/False</string>
    <string name="nu">Numeric</string>
    <string name="enterQuestion">Enter question here</string>
    <string name="enterAnswer">Enter answer here</string>
    <string name="trueAnswer">True</string>
    <string name="falseAnswer">False</string>

    <string name="snackbar_message">"Patient records have been imported successfully"</string>
    <string name="menu_help">Help</string>
    <string name="btn_import">Import</string>
    <string name="btn_statistics">Statistics</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_ok">OK</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="text_name">Name:</string>
    <string name="text_address">Address:</string>
    <string name="text_age">Age:</string>
    <string name="text_birthday">Date of Birth:</string>
    <string name="text_phone_number">Phone Number:</string>
    <string name="text_health_card">Health Card:</string>
    <string name="text_description">Description:</string>
    <string name="text_patient_type">Patient Type:</string>
    <string name="text_select_type">Select Patient Type</string>
    <string name="text_surgery">Surgeries:</string>
    <string name="text_allergy">Allergies:</string>
    <string name="text_braces">Had Braces:</string>
    <string name="text_medical_benefit">Medical Benefits:</string>
    <string name="text_glasses_date">Glasses Date:</string>
    <string name="text_glasses_store">Glasses Store:</string>
    <string name="text_statistics">AGE STATISTICS</string>
    <string name="text_minimum_age">Minimum Age:&#160;&#160;</string>
    <string name="text_maximum_age">Maximum Age:&#160;</string>
    <string name="text_average_age">Average Age:&#160;&#160;&#160;&#160;</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="text_doctor">Doctor</string>
    <string name="text_dentist">Dentist</string>
    <string name="text_optometrist">Optometrist</string>
    <string name="hint_name">Enter name...</string>
    <string name="hint_address">Enter address...</string>
    <string name="hint_age">Enter age...</string>
    <string name="hint_birthday">Enter birthday...</string>
    <string name="hint_phone_number">Enter phone number...</string>
    <string name="hint_health_card">Health card number...</string>
    <string name="hint_description">Enter description...</string>
    <string name="hint_surgery">Surgery history...</string>
    <string name="hint_allergy">Allergy history...</string>
    <string name="hint_glasses_date">Glasses purchse date...</string>
    <string name="hint_glasses_store">Glasses purchase store...</string>
    <string name="title_patient_list">Patient List</string>
    <string name="title_patient_record">Record Detail</string>
    <string name="title_registration_form">Registration Form</string>
    <string name="toast_doctor">Doctor Type Selected</string>
    <string name="toast_dentist">Dentist Type Selected</string>
    <string name="toast_optometrist">Optometrist Type Selected</string>
<<<<<<< HEAD
=======
    <string name="icon">icon</string>
    <string name="correctAnswerIs">Correct answer is: </string>
    <string name="title_activity_oc_show_saved_stop">activity_oc_show_saved_stop</string>
    <string name="lettera">A</string>
    <string name="letterb">B</string>
    <string name="letterc">C</string>
    <string name="letterd">D</string>
>>>>>>> quizCreator
</resources>
