<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shican.quizcreator.CreateQuiz">

    <TextView
        android:id="@+id/stopNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/oc_stopNum"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/stopDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stopNum"
        android:text="@string/oc_stopDes"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/routeNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/oc_routeNum"
        android:layout_below="@+id/stopDes"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/routeDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/routeNum"
        android:text="@string/oc_routeDes"
        android:textSize="18sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/oc_back" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/routeDes"
        android:layout_above="@+id/back"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />


</RelativeLayout>