<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shican.quizcreator.ChooseQuiz"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_green_light"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/chooseQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/multipleChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multipleChoice" />

    <Button
        android:id="@+id/numeric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Numeric" />

    <Button
        android:id="@+id/trueFalse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TrueFlase" />


</LinearLayout>
