<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shican.quizcreator.DoctorFragmentDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SurgeryLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_surgery"
            android:id="@+id/textView_surgeries"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/surgeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_surgeries"
            android:layout_toRightOf="@+id/textView_surgeries"
            android:hint="@string/hint_surgery"
            android:inputType="text"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AllergyLayout"
        android:layout_below="@id/SurgeryLayout"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_allergy"
            android:id="@+id/textView_allergies"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/allergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_allergies"
            android:layout_toRightOf="@+id/textView_allergies"
            android:hint="@string/hint_allergy"
            android:inputType="text"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

</RelativeLayout>
