<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shican.quizcreator.OptometristFragmentDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GlassDateLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_glasses_date"
            android:id="@+id/textView_glasses_date"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/glasses_purchase_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_glasses_date"
            android:layout_toRightOf="@+id/textView_glasses_date"
            android:hint="@string/hint_glasses_date"
            android:inputType="date"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GlassStoreLayout"
        android:layout_below="@id/GlassDateLayout"
        android:layout_marginStart="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_glasses_store"
            android:id="@+id/textView_glasses_store"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:id="@+id/glasses_purchase_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_glasses_store"
            android:layout_toRightOf="@+id/textView_glasses_store"
            android:hint="@string/hint_glasses_store"
            android:inputType="text"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>

</RelativeLayout>

