<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mcDisplayFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shican.quizcreator.mcDisplayFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/lettera"
            android:contentDescription="@string/lettera" />

        <TextView
            android:id="@+id/Answer1"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enterAnswer"
            android:inputType="textAutoCorrect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/letterb"
            android:contentDescription="@string/letterb"/>

        <TextView
            android:id="@+id/enterAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enterAnswer"
            android:inputType="textAutoCorrect" />
    </LinearLayout>

</LinearLayout>
