<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shican.quizcreator.CreateQuiz">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_green_light"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolBar"
        android:text="@string/oc_addStop"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/inProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:progress="@android:integer/config_mediumAnimTime"
        android:visibility="visible" />

    <EditText
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inProgress"
        android:ems="10"
        android:hint="@string/oc_enterStop" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add"
        android:layout_centerHorizontal="true"
        android:text="@string/oc_search" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:text="@string/oc_add" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_button"
        android:layout_marginStart="0dp"
        android:text="@string/oc_back" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.shican.quizcreator.OCFragementRecentStops"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/back" />


</RelativeLayout>
